--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 
 .container{
     background-color: black;
@@ -9,14 +6,17 @@
     /*height: 100vh;*/
 }
 
-.container .navbar{
+.navbar{
+    float: none;
     width: 100%;
     height: 60px;
     background-color: rgba(255,255,255,0.2)
+
 }
 
 .navbar ul{
-    float:right;
+    
+    align-self:center;
     
 }
 
@@ -43,6 +43,7 @@ a{
     display: inline-block;
     margin-right: 20px;
     line-height: 60px;
+    align-items: center;
 }
 .navbar ul li a{
     color: white;
