--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,90 @@
-/*css dosyası*/
+#menu
 
 header {
-    background-color:cadetblue;
-    padding: 30px;
-    text-align: center;
-    color: white;
-  }
+  background-color:cadetblue;
+  padding: 30px;
+  text-align: center;
+  color: white;
+}
 
 
 .item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+  
 }
 
 marquee{
-  margin-top: 10;
-  direction:"left"; 
-  width:"%70" ;
-  /* height:"100" ; */
-  background-color:black;
-  color: white;font-size: 20px;
-  padding-top: 3%;
+margin-top: 10;
+direction:"left"; 
+width:"%70" ;
+/* height:"100" ; */
+/* background-color:black; */
+color: black;font-size: 20px;
+padding-top: 3%;
 
 
 }
 
 
 .border{
-  border-width:2px;
-  border-color: black;
+border-width:2px;
+border-color: black;
 }
 
 .kategori{
-  list-style-type: none;
-  font-size: 25px;
-  color: beige;
-  
+list-style-type: none;
+font-size: 25px;
+color: beige;
+
 }
 
 #logo{
-  width: 60px;
-  height: 60px;
-  align-content: flex-end;
-  justify-content:center ;
-  width: fit-content;
-  padding-left: 45%; 
 
+height: 80px;
+width:  80px;
+z-index: 3;
+position: absolute;
+left:20px;
+top:20px;
+padding-bottom: 5px;
+}
+
+#logo2{
+  height: 60px;
+  z-index: 5  ;
+  position: absolute;
+  right:20px;
+  top:20px;
+  }
+
+body{
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.form{
+  border: 2px solid black;
+  margin: 219px;
+}
+
+.float{
+position:fixed;
+width:60px;
+height:60px;
+bottom:40px;
+right:40px;
+background-color:#25d366;
+color:#FFF;
+border-radius:50px;
+text-align:center;
+font-size:30px;
+box-shadow: 2px 2px 3px #999;
+z-index:100;
+}
+
+.my-float{
+margin-top:16px;
 }
 
