--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,11 @@ margin-top:16px;
   align-items: center;
   padding-left: 35%;
 }
+
+.hakyazi{
+align-items: center; 
+padding-left: 20%; 
+padding-right: 20%; 
+padding-top: 10%; 
+padding-bottom: 10%;
+}
